Issue #2825154 by michael_wojcik, tkoleary, tedbow: "offcanvas-lining" div inappropriately covers whole page

--- a/core/modules/outside_in/css/outside_in.module.css
+++ b/core/modules/outside_in/css/outside_in.module.css
@@ -38,12 +38,3 @@
 [dir="rtl"] .toolbar .toolbar-bar .contextual-toolbar-tab.toolbar-tab {
   float: right;
 }
-
-.offcanvas-lining {
-  background: #333;
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  z-index: -1;
-}
